<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pets"
            android:icon="@drawable/pets_icon"
            android:title="@string/menu_pets" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_archivo"
            android:icon="@drawable/archivo_icon"
            android:title="@string/menu_archivo" />
        <item
            android:id="@+id/nav_contac"
            android:icon="@drawable/phone_icon"
            android:title="@string/menu_contac" />
        <item
            android:id="@+id/nav_ajuste"
            android:icon="@drawable/ajustes_icon"
            android:title="@string/menu_ajustes" />
    </group>
</menu>